--- a/index.html
+++ b/index.html
@@ -2,20 +2,22 @@
 <html>
     <head>
         <link rel="stylesheet" href="style.css">
-    </head>  
-    <body> 
-        <div id="menu">
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="contact.html">Contact</a>
+    </head>
+    <body>
+        <div id="header">
+            <img src="images/logo.png"/>
         </div>
-        <div class="gallery">
-            <a href="avenger-1.html"><img src="images/avengers_01.jpg" /></a>
-            <a href="avenger-2.html"><img src="images/avengers_02.jpg" /></a>
-            <a href="avenger-3.html"><img src="images/avengers_03.jpg" /></a>
-            <a href="avenger-4.html"><img src="images/avengers_04.jpg" /></a>
-            <a href="avenger-5.html"><img src="images/avengers_05.jpg" /></a>
-            <a href="avenger-6.html"><img src="images/avengers_06.jpg" /></a>
+        <div id="tabs-top">
+           <a href="animals.html">ANIMALS</a>
+           <a href="#">MAP</a>
+           <a href="places.html">PLACES</a>
+        </div>
+        <div id="main-home">
+            <img src="images/map.png" width="100%">
+        </div>
+        <div id="tabs-bottom">
+            <a href="weather.html">WEATHER</a>
+            <a href="feedback.html">FEEDBACK</a>
         </div>
     </body>
 </html>
